[package]
name = "dhke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
clap = "3.1.18"
exitcode = "1.1.2"
hex = "0.4"
mina-curves = { git = "https://github.com/o1-labs/proof-systems.git"}
rand = "0.8.0"
o1-utils = { git = "https://github.com/o1-labs/proof-systems.git"}
